# HotPaste

./: .geminiignore  .gitignore  GEMINI.md  index.html  manifest.json  manifest.webmanifest  package-lock.json  package.json  registerSW.js  sw.js  vite.config.ts
.github/workflows/: deploy.yml
.husky/: pre-commit
GEMINI/: card-config-spec.md  card-management-spec.md
assets/: index-26yImKf-.js  index-2Al89GZp.js  index-52_AXDMl.css  index-B0IaAhh1.js  index-B0SbZGCw.css  index-B2tRJumg.js  index-B37dTmJN.js  index-B3igVi40.js  index-BCoiZ1WQ.css  index-BE1EBkRA.css  index-BJR-3D2S.css  index-BJZ-U8E8.js  index-BQrIAWUa.js  index-BThRrQo1.js  index-BWsZw9SP.css  index-BkbiKoMu.css  index-Bo9_k3if.js  index-BomJ95ac.css  index-Bsg6sGfm.css  index-BwZ5KK54.js  index-C0lzLosJ.css  index-C1MQpnx5.css  index-C1SFizxt.css  index-C3PDbhOp.js  index-C65wP-fk.js  index-C99fa1dv.css  index-CAwWQovR.js  index-CF34Dzem.js  index-CHkaNQCL.js  index-CMMYG44_.js  index-CMeQBEo8.css  index-CONuqjoj.css  index-CXQSEUde.js  index-CXjfb0AF.js  index-CZ-bla5R.css  index-C_qiOQcM.css  index-CdT4YV2F.js  index-Ceec4pEG.js  index-CjiThNqf.css  index-Cm6YJibz.js  (+83 more)
public/: app-version.json
scripts/: bump-version.js
src/: App.svelte  app.css  main.ts
src-tauri/: 2  Cargo.toml  TAURI_V2_MIGRATION.md  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: types.ts
src/lib/components/: AddSnippetCard.svelte  CardGrid.svelte  ContextMenu.svelte  (+15 more)
src/styles/: fonts.css  themes.css  tokens.css
(+60 files in other folders)
